.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glfinstmt4__c.object
<CustomObject>
    <description>glfinstmt4__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfinstmt4_glfinstmt1__r.rstkf__externalid__c  &amp; &apos;_&apos;  &amp;   TEXT( rstkf__glfinstmt4_lineno__c )</formula>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt4_col_01__c</fullName>
        <label>glfinstmt4_col_01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt4_col_02__c</fullName>
        <label>glfinstmt4_col_02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt4_col_03__c</fullName>
        <label>glfinstmt4_col_03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt4_glfinstmt1__c</fullName>
        <label>glfinstmt4_glfinstmt1</label>
        <referenceTo>rstkf__glfinstmt1__c</referenceTo>
        <relationshipLabel>Financial Report Data - Line Column</relationshipLabel>
        <relationshipName>Financial_Statement_Data_Line_Column</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt4_iszerovalueline__c</fullName>
        <formula>AND(
OR(ISNULL(rstkf__glfinstmt4_col_01__c), rstkf__glfinstmt4_col_01__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_02__c), rstkf__glfinstmt4_col_02__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_03__c), rstkf__glfinstmt4_col_03__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_04__c), rstkf__glfinstmt4_col_04__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_05__c), rstkf__glfinstmt4_col_05__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_06__c), rstkf__glfinstmt4_col_06__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_07__c), rstkf__glfinstmt4_col_07__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_08__c), rstkf__glfinstmt4_col_08__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_09__c), rstkf__glfinstmt4_col_09__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_10__c), rstkf__glfinstmt4_col_10__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_11__c), rstkf__glfinstmt4_col_11__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_12__c), rstkf__glfinstmt4_col_12__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_13__c), rstkf__glfinstmt4_col_13__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_14__c), rstkf__glfinstmt4_col_14__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_15__c), rstkf__glfinstmt4_col_15__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_16__c), rstkf__glfinstmt4_col_16__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_17__c), rstkf__glfinstmt4_col_17__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_18__c), rstkf__glfinstmt4_col_18__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_19__c), rstkf__glfinstmt4_col_19__c = 0),
OR(ISNULL(rstkf__glfinstmt4_col_20__c), rstkf__glfinstmt4_col_20__c = 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Zero Value Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt4_lineno__c</fullName>
        <label>glfinstmt4_lineno</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt4_totalgroup__c</fullName>
        <label>glfinstmt4_totalgroup</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Report Data - Line Column</label>
    <listViews>
        <fullName>rstkf__glfinstmt4</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfinstmt4_lineno__c</columns>
        <columns>rstkf__glfinstmt4_col_01__c</columns>
        <columns>rstkf__glfinstmt4_col_02__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfinstmt4_glfinstmt1__c</field>
            <operation>equals</operation>
            <value>a8n1P00000001E9</value>
        </filters>
        <filters>
            <field>rstkf__glfinstmt4_iszerovalueline__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>glfinstmt4</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report Data - Line Column</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>